--- a/Diagram/app/build.gradle
+++ b/Diagram/app/build.gradle
@@ -41,4 +41,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
+    compile 'com.github.ivbaranov:materiallettericon:0.2.3'
+
+    compile 'com.github.ivbaranov:materiallettericon:0.2.3'
+
+    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+
 }
